[package]
name = "min-no-std"
version = "0.1.0"
description = "A minimal setup for a `no_std` library with `wee_alloc` as allocator"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/min-no-std"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = "0.4.5"

[profile.release]
lto = true
opt-level = "z"
panic = 'abort'
